src/App.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');

:root{

  /************ Original Color Pallette **************/

  --primary-white: #ffffff;
  --primary-light-grey: #f4f4f4;
  --primary-grey: #ccd1d9;
  --primary-dark-grey: #666666;
  --dark-mode-green: #f9ab00;
  --primary-dark: rgb(52, 58, 64);
  --primary-red: #ef4035;
  --primary-hover-red: #f33501;
  --primary-black: #000000;
  --primary-transparent-black: rgba(0,0,0,0.7);
  --primary-green: green;

  /************ Dark Mode Color Pallette **************/

  --background-black: #121212;
  --navbar-dark-grey: #181818;
  --body-light-grey: #404040;
  --body-dark-grey: #282828;
  --primary-text-white: #ffffff;
  --secondary-text-white: #B3B3B3;


  --dark-mode-red: #CF6679;
  --dark-mode-blue: #3700B3;
  --dark-mode-light-blue: #6200EE;
  --dark-mode-purple: #BB86FC;
  --dark-mode-green: #018786;
  --dark-mode-turquoise: #03DAC6;

  --dark-mode-extended-yellow: #FF991F;
  --dark-mode-extended-blue: #00A3BF;
  --dark-mode-extended-blue-light: #B3F5FF;

 
}

body{
  font-family: "Roboto Condensed", sans-serif !important;
  background-color: var(--primary-black);
}

/********************************* NAVBAR *********************************/

nav {
  z-index: 2;
  background: var(--navbar-dark-grey);
  /* opacity: 100%; */
}

.logo{
  width: 6rem; 
}

/****** MENU LINKS ******/

nav a.nav-link{
  font-size: .8rem;
  letter-spacing: 0.0375rem;
  cursor: pointer;
}

nav ul li {
  text-transform: uppercase;
}

.navbar-nav > li > a {
  margin-right: 0.75rem;
  margin-left: 0.75rem;
  color: var(--secondary-text-white) !important;
  border-top: 0.1875rem solid var(var(--navbar-dark-grey));
} 

.navbar-brand{
  max-width: 17.25rem;
  padding: 0 !important;
  height: 6rem !important;
}

@media(max-width: 768px) {
  .navbar-brand {
    width: 7rem;
  }
}

.navbar-nav > li > a.active, .navbar-nav > li > a:focus {
  border-top: 0.1875rem solid var(--secondary-text-white);
}

.navbar-nav > li > a:hover{
  border-top: 0.1875rem solid var(--secondary-text-white);
}


/****** RESUME a LINK ******/

.resume-a {
  text-decoration: none;
  color: var(--secondary-text-white);
  border: .03rem solid ;
  border-color: var(--secondary-text-white);
  padding: .5rem;
  margin-right: 1.5rem;
}

.resume-a:hover {
  text-decoration: none;
  color: var(--navbar-dark-grey);
  border-color: var(--secondary-text-white);
  background-color: var(--secondary-text-white);
}
 
/********************************* HEADER *********************************/

.header-wrapper {
  position: relative;
  background: var(--background-black);
  background: url(DarkMountainRange.jpg) no-repeat;
  background-size: cover;
  background-position: center;
  height: 100vh;
}

.main-info {
  display: flex;
  padding-top: 10rem;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  z-index: 1;
}

.main-info h1 {
  color: var(--dark-mode-green);
  text-transform: uppercase;
}


/****** TYPED TEXT ******/

.typed-text {
  font-size: 2rem;
  color: var(--dark-mode-green);
}

@media(max-width: 768px) {
  .main-info h1 {
    font-size: 1.7rem !important;
  }
  .typed-text {
    font-size: 1.3rem !important;
  }
}

/****** HEADER MAIN OFFER BUTTON ******/

.btn-main-offer {
  border: 1px solid var(--dark-mode-green);
  text-transform: uppercase;
  border-radius: 0;
  padding: 0.625rem 0.75rem 0.75rem 0.75rem;
  color: var(--dark-mode-green);
  margin: 2rem;
  cursor: pointer;
  z-index: 1;
}

.btn-main-offer:hover{
  text-decoration: none;
  background-color: var(--dark-mode-green);
  color: var(--background-black);
  transition: .2s ease-in-out;
}

/****** PARTICLES JS******/

.particles-canvas {
  position: absolute;
  height: 100vh;
  width: 100vw;
  z-index: 1;
}

@media(max-width: 768px) {
  /* .particles-canvas {
    display: none;
  } */
}

/********************************* ABOUT PAGE *********************************/

#about {
  background: black;
  padding-top: 6rem;
  padding-bottom: 7rem;
}

.photo-wrap {
  display: flex;
  justify-content: center;
  align-items: center;
}

.profile-img {
  width: 21rem;
  border-radius: 50%;
  padding: .3rem;
  border: 1px solid var(--dark-mode-green);
}

.about-heading {
  color: var(--dark-mode-green);
  text-transform: uppercase;
}

.p-about {
  color: var(--secondary-text-white);
}

@media(max-width: 468px) {
  .profile-img {
    width: 10rem;
  }
}

/******** ABOUT CAROUSEL **********/

.about-carousel {
    text-align: center;
    max-width: 20rem;
    margin: 0 auto 2rem auto; 
    background: var(--body-dark-grey);
}

.linksCarousel {
  color: var(--dark-mode-green);
  background: transparent;
  margin-top: -6%;
  width: 54%;
  margin-left: auto;
  margin-right: auto;
  padding-top: 3%;
  padding-bottom: 8%;
  padding-left: 5%;
  padding-right: 5%;
  height: 11rem;
}

.linksCarousel h1 {
  color: var(--dark-mode-green);
  padding-top: 0rem;
} 

.linksCarousel h5 {
  color: var(--dark-mode-green);
  font-weight: 600;
  text-transform: uppercase;
}

.linksCarousel p {
  color: var(--dark-mode-green);
}

.carousel .slide {
  width: 10rem !important;
  border-radius: 50%;
}

.carousel .slide {
  background: transparent !important;
  height: 100% !important;
  padding-top: 2rem;
}

.carousel-root {
  margin: auto !important;
  margin-top: 3% !important;
 }  



/********************************* LINKS PAGE *********************************/

.services {
  text-align: center;
  padding-bottom: 0rem;
  background: var(--body-dark-grey);
  padding-top: 0rem;
  /* background: url(water.jpg); */
  background-size: cover;
  background-position: center;
  /* height: 165vh; */

}

.services h1 {
  color: var(--dark-mode-green);
  text-transform: uppercase;
}

.services h3 {
  color: var(--dark-mode-green);
  text-transform: uppercase;
}

.services h5 {
  color: var(--dark-mode-green);
  text-transform: uppercase;
}
/* ... */

